# atmaCup-22-CA-x-atmaCup-3rd-

./: .gitignore  README.md  main.py  pyproject.toml  score_progress.md
experiment/100_train_arcface_exp000/threshold/: config.yaml
experiment/100_train_arcface_exp000/wandb/: latest-run
experiment/100_train_arcface_exp000/yaml/: config.yaml
experiment/100_train_arcface_exp001/threshold/: 200_config.yaml  config.yaml
experiment/100_train_arcface_exp001/wandb/: latest-run
experiment/100_train_arcface_exp001/yaml/: config.yaml
experiment/100_train_arcface_exp004/wandb/: latest-run
experiment/100_train_arcface_exp004/yaml/: config.yaml
experiment/100_train_arcface_exp005/wandb/: latest-run
experiment/100_train_arcface_exp005/yaml/: config.yaml
experiment/100_train_arcface_exp006_fold0/wandb/: latest-run
experiment/100_train_arcface_exp006_fold0/yaml/: config.yaml
experiment/100_train_arcface_exp006_fold1/yaml/: config.yaml
experiment/100_train_arcface_exp006_fold2/threshold/: 200_config.yaml
experiment/100_train_arcface_exp006_fold2/yaml/: config.yaml
notebook/: 000_[EDA]basketball_player_detection.ipynb  000_[EDA]basketball_player_detection_my.ipynb  000_[EDA]renewal_dataset.ipynb  010_[EDA]preprocess_check.ipynb  100_[TRAIN]baseline+Arcface.ipynb  100_[TRAIN]baseline.ipynb  300_[INFER]check_inference.ipynb  900_[ENS]ensemble.ipynb
src/atma_datasets/: datamodule.py  player_dataset.py  transforms.py
src/models/: arcface.py  fusion_model.py  lightning_module.py
src/training/: step_functions.py
src/utils/: wandb_utils.py
(+127 files in other folders)
